// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button.tsx > should render properly 1`] = `
<div>
  <button
    class="_button_closer_8d9a3f"
    title="Test button"
  >
    <svg
      aria-hidden="true"
      class="_icon_2be8fc _primary_2be8fc _icon_8d9a3f"
      fill="none"
      viewBox="-1 -1 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <i>
      Test button
    </i>
  </button>
</div>
`;

exports[`Button.tsx > should render with className 1`] = `
<div>
  <button
    class="_button_closer_8d9a3f mock_test_class_name"
    title="Test button"
  >
    <svg
      aria-hidden="true"
      class="_icon_2be8fc _primary_2be8fc _icon_8d9a3f"
      fill="none"
      viewBox="-1 -1 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <i>
      Test button
    </i>
  </button>
</div>
`;
